kubernetes/apps/security/keycloak/app/httproute-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: login
    app.kubernetes.io/name: login
    app.kubernetes.io/part-of: cilium
  name: login
  namespace: network
spec:
  hostnames:
  - login.${EXTERNAL_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-gateway
    namespace: network
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: login-ui
      namespace: network
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
